[package]
name = "pyraystack"
version = "0.1.0"
authors = ["A Mackay <amk@gegroup.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "Programming Language :: Rust",
]

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
pyo3 = "0.13"
raystack = "0.8"
thiserror = "1"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
url = "2.2"